[gd_scene load_steps=8 format=2]

[ext_resource path="res://ressources/FX/bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Balle.gd" type="Script" id=2]
[ext_resource path="res://scenes/Particule_tir.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.10697
height = 13.1588

[node name="Balle" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite_balle" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
playing = true

[node name="Collision_balle" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Particule_tir" parent="." instance=ExtResource( 3 )]
position = Vector2( 12, 0 )
rotation = 1.5708
